--- a/app/discount.html
+++ b/app/discount.html
@@ -881,7 +881,7 @@
 											Раскладушка
 											<div class="card-main-block-description-row-item-tooltip">
 												?
-												<div class="card-main-block-description-row-item-tooltip__card">
+												<div class="card-main-block-description-row-item-tooltip__card card-main-block-description-row-item-tooltip__card_mod">
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
@@ -897,7 +897,7 @@
 											Искусственная кожа Принт
 											<div class="card-main-block-description-row-item-tooltip">
 												?
-												<div class="card-main-block-description-row-item-tooltip__card">
+												<div class="card-main-block-description-row-item-tooltip__card card-main-block-description-row-item-tooltip__card_mod">
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
@@ -1024,7 +1024,7 @@
 											Раскладушка
 											<div class="card-main-block-description-row-item-tooltip">
 												?
-												<div class="card-main-block-description-row-item-tooltip__card">
+												<div class="card-main-block-description-row-item-tooltip__card card-main-block-description-row-item-tooltip__card_mod">
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
@@ -1040,7 +1040,7 @@
 											Искусственная кожа Принт
 											<div class="card-main-block-description-row-item-tooltip">
 												?
-												<div class="card-main-block-description-row-item-tooltip__card">
+												<div class="card-main-block-description-row-item-tooltip__card card-main-block-description-row-item-tooltip__card_mod">
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
@@ -1167,7 +1167,7 @@
 											Раскладушка
 											<div class="card-main-block-description-row-item-tooltip">
 												?
-												<div class="card-main-block-description-row-item-tooltip__card">
+												<div class="card-main-block-description-row-item-tooltip__card card-main-block-description-row-item-tooltip__card_mod">
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
@@ -1183,7 +1183,7 @@
 											Искусственная кожа Принт
 											<div class="card-main-block-description-row-item-tooltip">
 												?
-												<div class="card-main-block-description-row-item-tooltip__card">
+												<div class="card-main-block-description-row-item-tooltip__card card-main-block-description-row-item-tooltip__card_mod">
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
@@ -1310,7 +1310,7 @@
 											Раскладушка
 											<div class="card-main-block-description-row-item-tooltip">
 												?
-												<div class="card-main-block-description-row-item-tooltip__card">
+												<div class="card-main-block-description-row-item-tooltip__card card-main-block-description-row-item-tooltip__card_mod">
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
@@ -1326,7 +1326,7 @@
 											Искусственная кожа Принт
 											<div class="card-main-block-description-row-item-tooltip">
 												?
-												<div class="card-main-block-description-row-item-tooltip__card">
+												<div class="card-main-block-description-row-item-tooltip__card card-main-block-description-row-item-tooltip__card_mod">
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
 													Шинил - пропил, винил, метил, дверь мне запилил.
