--- a/app/fabrics.html
+++ b/app/fabrics.html
@@ -913,7 +913,7 @@
 								<div class="fabrics-filter-column-row-value">
 									<div class="fabrics-filter-column-row-value-row">
 										<div class="fabrics-filter-column-row-value-row-item fabrics-filter-column-row-value-row-item_osob">
-											Антивандальная
+											<span class="text-underline">Антивандальная</span>
 											<div class="card-main-block-description-row-item-tooltip">
 												?
 												<div class="card-main-block-description-row-item-tooltip__card">
@@ -926,7 +926,7 @@
 											</div>
 										</div>
 										<div class="fabrics-filter-column-row-value-row-item fabrics-filter-column-row-value-row-item_osob">
-											Водоотталкивающая
+											<span class="text-underline">Водоотталкивающая</span>
 											<div class="card-main-block-description-row-item-tooltip">
 												?
 												<div class="card-main-block-description-row-item-tooltip__card">
@@ -941,7 +941,7 @@
 									</div>
 									<div class="fabrics-filter-column-row-value-row">
 										<div class="fabrics-filter-column-row-value-row-item fabrics-filter-column-row-value-row-item_osob">
-											Износостойкая
+											<span class="text-underline">Износостойкая</span>
 											<div class="card-main-block-description-row-item-tooltip">
 												?
 												<div class="card-main-block-description-row-item-tooltip__card">
@@ -954,7 +954,7 @@
 											</div>
 										</div>
 										<div class="fabrics-filter-column-row-value-row-item fabrics-filter-column-row-value-row-item_osob">
-											Грязеотталкивающая
+											<span class="text-underline">Грязеотталкивающая</span>
 											<div class="card-main-block-description-row-item-tooltip">
 												?
 												<div class="card-main-block-description-row-item-tooltip__card">
