--- a/app/mechanics.html
+++ b/app/mechanics.html
@@ -761,32 +761,44 @@
 						<div class="mech-row-gallery">
 							<div class="mech-row-gallery-big">
 								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
 									<img src="img/mech-1.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-2.png">
-								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-1.png">
-								</div>
-							</div>
-							<div class="mech-row-gallery-mini">
-								<div class="mech-row-img">
-									<img src="img/mech-2.png">
-								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-1.png">
-								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
 									<img src="img/mech-1.png">
 								</div>
 							</div>
+							<div class="mech-row-gallery-mini-wrapper">
+								<div class="mech-row-gallery-mini">
+									<div class="mech-row-img">
+										<img src="img/mech-2.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-1.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-2.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-1.png">
+									</div>
+								</div>
+								<div class="mech-row-gallery-mini__arrow-prev">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+									</svg>
+								</div>
+								<div class="mech-row-gallery-mini__arrow-next">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.9075 21.4871L21.1907 22.1844L21.9075 21.4871ZM21.8484 25.7299L21.1513 25.013L21.8484 25.7299ZM1.26038 1.6973L21.1907 22.1844L22.6243 20.7898L2.69394 0.3027L1.26038 1.6973ZM21.1513 25.013L0.302908 45.283L1.69709 46.717L22.5455 26.4469L21.1513 25.013ZM21.1907 22.1844C21.9611 22.9763 21.9435 24.2428 21.1513 25.013L22.5455 26.4469C24.1298 24.9066 24.165 22.3736 22.6243 20.7898L21.1907 22.1844Z" fill="black"></path>
+									</svg>
+								</div>	
+							</div>	
 						</div>
 						<div class="mech-row-info">
 							<div class="mech-row-info-item mech-row-info-item_head">Дельфин</div>
@@ -801,32 +813,44 @@
 						<div class="mech-row-gallery">
 							<div class="mech-row-gallery-big">
 								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+									<img src="img/mech-3.png">
 								</div>
 							</div>
-							<div class="mech-row-gallery-mini">
-								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+							<div class="mech-row-gallery-mini-wrapper">
+								<div class="mech-row-gallery-mini">
+									<div class="mech-row-img">
+										<img src="img/mech-2.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-1.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-2.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-1.png">
+									</div>
 								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+								<div class="mech-row-gallery-mini__arrow-prev">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+									</svg>
 								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-2.png">
-								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-1.png">
-								</div>
-							</div>
+								<div class="mech-row-gallery-mini__arrow-next">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.9075 21.4871L21.1907 22.1844L21.9075 21.4871ZM21.8484 25.7299L21.1513 25.013L21.8484 25.7299ZM1.26038 1.6973L21.1907 22.1844L22.6243 20.7898L2.69394 0.3027L1.26038 1.6973ZM21.1513 25.013L0.302908 45.283L1.69709 46.717L22.5455 26.4469L21.1513 25.013ZM21.1907 22.1844C21.9611 22.9763 21.9435 24.2428 21.1513 25.013L22.5455 26.4469C24.1298 24.9066 24.165 22.3736 22.6243 20.7898L21.1907 22.1844Z" fill="black"></path>
+									</svg>
+								</div>	
+							</div>	
 						</div>
 						<div class="mech-row-info">
 							<div class="mech-row-info-item mech-row-info-item_head">Пантограф</div>
@@ -841,32 +865,44 @@
 						<div class="mech-row-gallery">
 							<div class="mech-row-gallery-big">
 								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+									<img src="img/mech-3.png">
 								</div>
 							</div>
-							<div class="mech-row-gallery-mini">
-								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+							<div class="mech-row-gallery-mini-wrapper">
+								<div class="mech-row-gallery-mini">
+									<div class="mech-row-img">
+										<img src="img/mech-2.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-1.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-2.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-1.png">
+									</div>
 								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+								<div class="mech-row-gallery-mini__arrow-prev">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+									</svg>
 								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-2.png">
-								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-1.png">
-								</div>
-							</div>
+								<div class="mech-row-gallery-mini__arrow-next">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.9075 21.4871L21.1907 22.1844L21.9075 21.4871ZM21.8484 25.7299L21.1513 25.013L21.8484 25.7299ZM1.26038 1.6973L21.1907 22.1844L22.6243 20.7898L2.69394 0.3027L1.26038 1.6973ZM21.1513 25.013L0.302908 45.283L1.69709 46.717L22.5455 26.4469L21.1513 25.013ZM21.1907 22.1844C21.9611 22.9763 21.9435 24.2428 21.1513 25.013L22.5455 26.4469C24.1298 24.9066 24.165 22.3736 22.6243 20.7898L21.1907 22.1844Z" fill="black"></path>
+									</svg>
+								</div>	
+							</div>							
 						</div>
 						<div class="mech-row-info">
 							<div class="mech-row-info-item mech-row-info-item_head">Дельфин</div>
@@ -881,32 +917,44 @@
 						<div class="mech-row-gallery">
 							<div class="mech-row-gallery-big">
 								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+									<img src="img/mech-3.png">
 								</div>
 								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+									<img src="img/mech-3.png">
 								</div>
 							</div>
-							<div class="mech-row-gallery-mini">
-								<div class="mech-row-img">
-									<img src="img/mech-2.png">
+							<div class="mech-row-gallery-mini-wrapper">
+								<div class="mech-row-gallery-mini">
+									<div class="mech-row-img">
+										<img src="img/mech-2.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-1.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-2.png">
+									</div>
+									<div class="mech-row-img">
+										<img src="img/mech-1.png">
+									</div>
 								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-1.png">
+								<div class="mech-row-gallery-mini__arrow-prev">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+									</svg>
 								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-2.png">
-								</div>
-								<div class="mech-row-img">
-									<img src="img/mech-1.png">
-								</div>
-							</div>
+								<div class="mech-row-gallery-mini__arrow-next">
+									<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+										<path d="M21.9075 21.4871L21.1907 22.1844L21.9075 21.4871ZM21.8484 25.7299L21.1513 25.013L21.8484 25.7299ZM1.26038 1.6973L21.1907 22.1844L22.6243 20.7898L2.69394 0.3027L1.26038 1.6973ZM21.1513 25.013L0.302908 45.283L1.69709 46.717L22.5455 26.4469L21.1513 25.013ZM21.1907 22.1844C21.9611 22.9763 21.9435 24.2428 21.1513 25.013L22.5455 26.4469C24.1298 24.9066 24.165 22.3736 22.6243 20.7898L21.1907 22.1844Z" fill="black"></path>
+									</svg>
+								</div>	
+							</div>	
 						</div>
 						<div class="mech-row-info">
 							<div class="mech-row-info-item mech-row-info-item_head">Пантограф</div>
