--- a/app/card.html
+++ b/app/card.html
@@ -926,12 +926,12 @@
 										<div class="card-main-block-description-row-item">
 											<div class="card-item-row-colors card-item-row-colors_horiz">
 												<div class="card-item-row-colors__color active"></div>
-												<div class="card-item-row-colors__color"></div>
-												<div class="card-item-row-colors__color"></div>
-												<div class="card-item-row-colors__color"></div>
-												<div class="card-item-row-colors__color"></div>
-												<div class="card-item-row-colors__color"></div>
-												<div class="card-item-row-colors__color"></div>
+												<div class="card-item-row-colors__color" style="background: #D0AE78"></div>
+												<div class="card-item-row-colors__color" style="background: #191516"></div>
+												<div class="card-item-row-colors__color" style="background: #E2B874"></div>
+												<div class="card-item-row-colors__color" style="background: #95873B"></div>
+												<div class="card-item-row-colors__color" style="background: #191516"></div>
+												<div class="card-item-row-colors__color" style="background: #E2B874"></div>
 											</div>
 										</div>
 										<!-- <div class="card-main-block-description-row-item card-main-block-description-row-item__btn-change" data-color>
@@ -1260,14 +1260,14 @@
 												<div class="tabs-container-list-item-innercontainer-side-material__head"><div class="material-text-name">Софа (замша)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 												<div class="tabs-container-list-item-innercontainer-side-material-list">
 													<div class="tabs-container-list-item-innercontainer-side-material-list-item">
-														<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
+														<div class="tabs-container-list-item-innercontainer-side-material-list-item__img" data-color="#000" data-prev-material="Замша">
 															<img src="img/material-1.png" alt="Один вид">
 														</div>
 														<div class="tabs-container-list-item-innercontainer-side-material-list-item__description">
 															Один вид
 														</div>
 													</div>
-													<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+													<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#444" data-prev-material="Замша">
 														<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 															<img src="img/material-2.png" alt="Один вид">
 														</div>
@@ -1327,7 +1327,7 @@
 												<div class="tabs-container-list-item-innercontainer-side-material__head">
 												<div class="material-text-name">Ламбре (велюр)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 												<div class="tabs-container-list-item-innercontainer-side-material-list">
-													<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+													<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#000" data-prev-material="Велюр">
 														<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 															<img src="img/material-1.png" alt="Один вид">
 														</div>
@@ -1335,7 +1335,7 @@
 															Один вид
 														</div>
 													</div>
-													<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+													<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#d0b423" data-prev-material="Велюр">
 														<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 															<img src="img/material-3.png" alt="Один вид">
 														</div>
@@ -1378,7 +1378,7 @@
 												</div>
 												<div class="tabs-container-list-item-innercontainer-side-material__head"><div class="material-text-name">Soft Leather (кожа)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 												<div class="tabs-container-list-item-innercontainer-side-material-list">
-													<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+													<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#444" data-prev-material="Кожа">
 														<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 															<img src="img/material-2.png" alt="Один вид">
 														</div>
@@ -1386,7 +1386,7 @@
 															Один вид
 														</div>
 													</div>
-													<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+													<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#000" data-prev-material="Кожа">
 														<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 															<img src="img/material-1.png" alt="Один вид">
 														</div>
@@ -1625,13 +1625,13 @@
 								<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Цвет:</div>
 								<div class="card-main-block-description-row-item">
 									<div class="card-item-row-colors card-item-row-colors_horiz">
-										<div class="card-item-row-colors__color active"></div>
-										<div class="card-item-row-colors__color"></div>
-										<div class="card-item-row-colors__color"></div>
-										<div class="card-item-row-colors__color"></div>
-										<div class="card-item-row-colors__color"></div>
-										<div class="card-item-row-colors__color"></div>
-										<div class="card-item-row-colors__color"></div>
+										<div class="card-item-row-colors__color active" style="background: #A75A2B"></div>
+										<div class="card-item-row-colors__color" style="background: #D0AE78"></div>
+										<div class="card-item-row-colors__color" style="background: #191516"></div>
+										<div class="card-item-row-colors__color" style="background: #E2B874"></div>
+										<div class="card-item-row-colors__color" style="background: #95873B"></div>
+										<div class="card-item-row-colors__color" style="background: #191516"></div>
+										<div class="card-item-row-colors__color" style="background: #E2B874"></div>
 									</div>
 								</div>
 								<!-- <div class="card-main-block-description-row-item card-main-block-description-row-item__btn-change" data-color>
@@ -2004,7 +2004,7 @@
 										</div>
 										<div class="tabs-container-list-item-innercontainer-side-material__head"><div class="material-text-name">Софа (замша)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 										<div class="tabs-container-list-item-innercontainer-side-material-list">
-											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#000" data-prev-material="Замша" data-prev-fabrics="Софа">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 													<img src="img/material-1.png" alt="Один вид">
 												</div>
@@ -2012,7 +2012,7 @@
 													Один вид
 												</div>
 											</div>
-											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#444" data-prev-material="Замша" data-prev-fabrics="Софа">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 													<img src="img/material-2.png" alt="Один вид">
 												</div>
@@ -2072,7 +2072,7 @@
 										<div class="tabs-container-list-item-innercontainer-side-material__head">
 										<div class="material-text-name">Ламбре (велюр)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 										<div class="tabs-container-list-item-innercontainer-side-material-list">
-											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#000" data-prev-material="Велюр" data-prev-fabrics="Ламбре">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 													<img src="img/material-1.png" alt="Один вид">
 												</div>
@@ -2080,7 +2080,7 @@
 													Один вид
 												</div>
 											</div>
-											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#d0b423" data-prev-material="Велюр" data-prev-fabrics="Ламбре">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 													<img src="img/material-3.png" alt="Один вид">
 												</div>
@@ -2123,7 +2123,7 @@
 										</div>
 										<div class="tabs-container-list-item-innercontainer-side-material__head"><div class="material-text-name">Soft Leather (кожа)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 										<div class="tabs-container-list-item-innercontainer-side-material-list">
-											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#444" data-prev-material="Кожа" data-prev-fabrics="Soft Leather">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 													<img src="img/material-2.png" alt="Один вид">
 												</div>
@@ -2131,7 +2131,7 @@
 													Один вид
 												</div>
 											</div>
-											<div class="tabs-container-list-item-innercontainer-side-material-list-item">
+											<div class="tabs-container-list-item-innercontainer-side-material-list-item" data-color="#000" data-prev-material="Кожа" data-prev-fabrics="Soft Leather">
 												<div class="tabs-container-list-item-innercontainer-side-material-list-item__img">
 													<img src="img/material-1.png" alt="Один вид">
 												</div>
@@ -2668,6 +2668,32 @@
 						</div>
 					</div>
 				</div>
+			</div>
+		</div>
+
+		<div class="card-preview">
+			<div class="card-preview-cross">
+				<div class="card-preview-cross__line"></div>
+				<div class="card-preview-cross__line"></div>
+			</div>
+			<div class="card-preview-arrow">
+				<svg width="24" height="47" viewBox="0 0 24 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+					<path d="M2.09251 21.4871L2.80929 22.1844L2.09251 21.4871ZM2.15157 25.7299L2.84866 25.013L2.15157 25.7299ZM22.7396 1.6973L2.80929 22.1844L1.37573 20.7898L21.3061 0.3027L22.7396 1.6973ZM2.84866 25.013L23.6971 45.283L22.3029 46.717L1.45448 26.4469L2.84866 25.013ZM2.80929 22.1844C2.03892 22.9763 2.05655 24.2428 2.84866 25.013L1.45448 26.4469C-0.129759 24.9066 -0.165016 22.3736 1.37573 20.7898L2.80929 22.1844Z" fill="black"></path>
+				</svg>
+			</div>
+			<div class="card-preview-img">
+				<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 555.55 251.91"><defs><style>.cls-1{fill:#d24a43;stroke-miterlimit:22.93;}.cls-1,.cls-4{stroke:#fff;stroke-width:0.5px;}.cls-1,.cls-2,.cls-3{fill-rule:evenodd;}.cls-2{fill:#fff;}.cls-3{fill:#6b6966;}.cls-4{fill:none;stroke-linecap:round;stroke-miterlimit:10;}</style><style>.cls-1{fill:#d24a43}</style></defs><title>Ресурс 1</title><g id="Слой_2" data-name="Слой 2"><g id="Layer_1" data-name="Layer 1"><path class="cls-1" d="M518.59.25H289a12.17,12.17,0,0,0-12.1,12.16V131.52l213.64-.39V79.61l40.11-3.82V12.41A12.17,12.17,0,0,0,518.59.25Z"/><polygon class="cls-1" points="553.06 150.67 276.95 150.24 276.91 131.52 490.36 131.13 499.21 131.52 509.16 137.39 548.19 137.78 553.06 150.67 553.06 150.67"/><path class="cls-1" d="M551.26,150.24H4.29a4,4,0,0,0-4,4V183a4,4,0,0,0,4,4h547a4,4,0,0,0,4-4V154.28a4,4,0,0,0-4-4Z"/><path class="cls-1" d="M35.26.25H264.82a12.17,12.17,0,0,1,12.09,12.16V131.52L63.3,131.13l0-51.52L23.16,75.79V12.41A12.17,12.17,0,0,1,35.26.25Z"/><polygon class="cls-1" points="0.79 150.67 276.89 150.24 276.92 131.52 63.48 131.13 54.64 131.52 44.69 137.39 5.67 137.78 0.79 150.67 0.79 150.67"/><path class="cls-2" d="M445.11,83.37a3.51,3.51,0,1,1,3.5-3.51,3.5,3.5,0,0,1-3.5,3.51Z"/><path class="cls-2" d="M362.31,83.37a3.51,3.51,0,1,1,3.51-3.51,3.51,3.51,0,0,1-3.51,3.51Z"/><path class="cls-2" d="M108.75,83.37a3.51,3.51,0,1,0-3.52-3.51,3.51,3.51,0,0,0,3.52,3.51Z"/><path class="cls-2" d="M191.54,83.37a3.51,3.51,0,1,0-3.5-3.51,3.51,3.51,0,0,0,3.5,3.51Z"/><path class="cls-2" d="M450.49,140.88c-1.73,0-3.14-.58-3.14-1.3s1.41-1.3,3.14-1.3,3.14.58,3.14,1.3-1.41,1.3-3.14,1.3Z"/><path class="cls-2" d="M367.16,141.45c-1.73,0-3.13-.58-3.13-1.3s1.4-1.3,3.13-1.3,3.13.58,3.13,1.3-1.4,1.3-3.13,1.3Z"/><path class="cls-2" d="M186,141.4c-1.74,0-3.15-.57-3.15-1.29s1.41-1.31,3.15-1.31,3.13.59,3.13,1.31-1.4,1.29-3.13,1.29Z"/><path class="cls-2" d="M103.42,140.89c-1.73,0-3.13-.58-3.13-1.3s1.4-1.3,3.13-1.3,3.14.58,3.14,1.3-1.41,1.3-3.14,1.3Z"/><path class="cls-3" d="M493.6,187H71.93a2.3,2.3,0,0,0-2.29,2.29v3.32a2.29,2.29,0,0,0,2.29,2.29H493.6a2.29,2.29,0,0,0,2.29-2.29v-3.32A2.3,2.3,0,0,0,493.6,187Z"/><polygon class="cls-3" points="466.14 194.13 481.43 212.77 481.43 221.78 459.24 194.13 466.14 194.13 466.14 194.13"/><polygon class="cls-3" points="493.17 207.54 481.38 207.54 481.38 248.2 493.17 248.2 493.17 207.54 493.17 207.54"/><path class="cls-3" d="M493.12,207.05a5.86,5.86,0,0,0-11.7,0Z"/><path class="cls-3" d="M494,248.75H480.63a.74.74,0,0,0-.74.74v1.68a.74.74,0,0,0,.74.74H494a.74.74,0,0,0,.74-.74v-1.68a.74.74,0,0,0-.74-.74Z"/><polygon class="cls-3" points="82.17 207.54 70.38 207.54 70.38 248.2 82.17 248.2 82.17 207.54 82.17 207.54"/><path class="cls-3" d="M82.12,207.05a5.86,5.86,0,0,0-11.7,0Z"/><path class="cls-3" d="M83,248.75H69.63a.74.74,0,0,0-.74.74v1.68a.74.74,0,0,0,.74.74H83a.74.74,0,0,0,.74-.74v-1.68a.74.74,0,0,0-.74-.74Z"/><polygon class="cls-3" points="97.45 194.94 82.16 213.58 82.16 222.59 104.35 194.94 97.45 194.94 97.45 194.94"/><path class="cls-4" d="M375.31,150.24c-.06-4.82-5.14-9.81-8.15-10.09-1.28-2.69-4-4.88-4.74-8.13,0-.21-.08-.63-.11-.87M458,149.74c-.07-4.82-5.14-9.81-8.15-10.1-1.28-2.68-4-4.87-4.73-8.12,0-.21-.09-.64-.12-.87m61.88,6.74c-20.77-.06-36.06.26-57,2.25-27.31-1.61-54.13-1.17-82.68.51-29.73-3-62.86-2.05-90.25.73"/><path class="cls-4" d="M445.11.89V131.52M362.31.89V131.52M276.92,79.86H530.68"/><path class="cls-4" d="M108.75.89V131.52M191.54.89V131.52m85.38-51.66H23.16"/><path class="cls-4" d="M178.54,150.24c.07-4.82,5.14-9.81,8.15-10.09,1.29-2.69,4-4.88,4.73-8.13a7.61,7.61,0,0,0,.12-.87M95.86,149.74c.07-4.82,5.14-9.81,8.15-10.1,1.29-2.68,4-4.87,4.74-8.12,0-.21.08-.64.11-.87M47,137.78c20.77-.06,36.08-.13,57,1.86,27.31-1.61,54.15-1.17,82.68.51,29.73-3,62.82-2.05,90.22.73m0-123.17V150.24"/><path class="cls-1" d="M509.29,137.39l-9.91-5.87c.7-13.91-2.24-21.68-8.82-28.5l-.05-25.42.45-.69c8.15,11.67,7,4.83,12.34,17.64L509,110.32l1.05,18.1-.79,9Z"/><path class="cls-1" d="M525.2,69.55c20.51,21.33,20.68,43.66,23,68.23l-38.91-.39c-.43-29.45-4.38-41.58-18.78-59.79.91-10,31-11.89,34.69-8Z"/><path class="cls-1" d="M539.9,91.59c6.16,14.65,6.77,29.93,8.3,46.19l-38.91-.39c-.17-11.23-.84-19.95-2.42-27.44,11.52-6.29,24.28-39.14,33-18.36Z"/><path class="cls-1" d="M44.56,137.39l9.92-5.87c-.71-13.91,2.24-21.68,8.82-28.5l0-25.42-.45-.69c-8.15,11.67-7,4.83-12.33,17.64l-5.73,15.77-1.07,18.1.8,9Z"/><path class="cls-1" d="M28.65,69.55C8.15,90.88,8,113.21,5.65,137.78l38.91-.39C45,107.94,48.94,95.81,63.34,77.6c-.9-10-31-11.89-34.69-8Z"/><path class="cls-1" d="M13.85,91.59c-6.08,14.65-6.68,29.93-8.2,46.19l38.46-.39c.16-11.23.84-19.95,2.38-27.44-11.37-6.29-24-39.14-32.64-18.36Z"/></g></g></svg>
+			</div>
+			<div class="card-preview-info">
+				<div class="card-preview-info-item">
+					Тип обивки: <span class="type-fabrics">Кожа</span>
+				</div>
+				<div class="card-preview-info-item">
+					Тип материала: <span class="type-material">Шинил</span>
+				</div>
+			</div>
+			<div class="card-preview-cost">
+				от <span class="card-preview-cost__number">35 700</span> ₽
 			</div>
 		</div>
 
