--- a/app/card.html
+++ b/app/card.html
@@ -2001,6 +2001,11 @@
 												<option value="">9-ая категория ткани</option>
 												<option value="">10-ая категория ткани</option>
 											</select>
+											<select class="fabrics-filter-select" placeholder="Выбрать тип ткани">
+												<option value="">1-ый Тип ткани</option>
+												<option value="">2-ой Тип ткани</option>
+												<option value="">3-ий Тип ткани</option>
+											</select>
 										</div>
 										<div class="tabs-container-list-item-innercontainer-side-material__head"><div class="material-text-name">Софа (замша)</div><div class="material-detail"><a href="fabrics.html">Подробнее</a></div><div class="material-category">1-ая категория</div></div>
 										<div class="tabs-container-list-item-innercontainer-side-material-list">
