--- a/app/index.html
+++ b/app/index.html
@@ -1735,7 +1735,7 @@ pjkl
 						</div>
 					</div>
 					<div class="card-main-block-description-row jc-sb">
-						<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Спальное место:</div>
+						<div class="card-main-block-description-row-item card-main-block-description-row-item_name">Спальное место (см):</div>
 						<div class="card-main-block-description-row-item">
 							<div class="card-main-block-description-row-item__value">200</div>
 							<div class="card-main-block-description-row-item__description">длина</div>
