--- a/app/where-buy.html
+++ b/app/where-buy.html
@@ -1355,7 +1355,7 @@
 					<div class="row-yellow">
 						<div class="card-main-block-description-row">
 							<div class="card-main-block-description-row-cost card-main-block-description-row-cost_align-stretch">
-								<div class="card-main-block-description-row-cost__number"><span>35 700</span> ₽</div>
+								<div class="card-main-block-description-row-cost__number">от <span>35 700</span> ₽</div>
 								<div class="card-main-block-description-row-cost__description">Цена зависит от выбранных параметров</div>
 							</div>
 						</div>
