--- a/app/card.html
+++ b/app/card.html
@@ -762,10 +762,12 @@
 				</div>
 				<div class="card-main-mob">
 					<div class="card-main-mob-head">Фэнтази</div>
-					<div class="card-main-mob-img">
-						<img src="img/card-big-1.png" alt="sofa">
-						<div class="card-main-block__like">
-							<img src="img/icons/heart.svg">
+					<div class="card-main-mob-img-wrapper">
+						<div class="card-main-mob-img">
+							<img src="img/card-big-1.png" alt="sofa">
+							<div class="card-main-block__like">
+								<img src="img/icons/heart.svg">
+							</div>
 						</div>
 					</div>
 					<div class="card-main-mob-main">
