--- a/app/index.html
+++ b/app/index.html
@@ -756,27 +756,27 @@
 					<div class="first-slider">
 						<div class="first-slider-item">
 							<a href="collection.html" target="_blank">
-								<img src="img/gallery-1.png">
+								<!-- <img src="img/gallery-1.png"> -->
 							</a>
 						</div>
 						<div class="first-slider-item">
 							<a href="collection.html" target="_blank">
-								<img src="img/gallery-1.png">
+								<!-- <img src="img/gallery-1.png"> -->
 							</a>
 						</div>
 						<div class="first-slider-item">
 							<a href="collection.html" target="_blank">
-								<img src="img/gallery-1.png">
+								<!-- <img src="img/gallery-1.png"> -->
 							</a>
 						</div>
 						<div class="first-slider-item">
 							<a href="collection.html" target="_blank">
-								<img src="img/gallery-1.png">
+								<!-- <img src="img/gallery-1.png"> -->
 							</a>
 						</div>
 						<div class="first-slider-item">
 							<a href="collection.html" target="_blank">
-								<img src="img/gallery-1.png">
+								<!-- <img src="img/gallery-1.png"> -->
 							</a>
 						</div>
 					</div>
@@ -796,15 +796,7 @@
 				<div class="block in-work">
 					<div class="in-work-item">
 						<div class="in-work-item__img">
-							<img src="img/inwork1.svg">
-						</div>
-						<div class="in-work-item__text">
-							Мы разрабатываем мебель, которая соответствует современным тенденциям интерьерного дизайна.
-						</div>
-					</div>
-					<div class="in-work-item">
-						<div class="in-work-item__img">
-							<img src="img/inwork2.svg" style="transform: scale(1.2);">
+							<img src="img/inwork2.svg" style="transform: scale(1.4);">
 						</div>
 						<div class="in-work-item__text">
 							Более 15 лет создаем надежную мебель только с использованием качественных материалов. Гарантия на все изделия 18 месяцев!
@@ -816,6 +808,14 @@
 						</div>
 						<div class="in-work-item__text">
 							Каждый заказ уникален благодаря широкому ассортименту обивок, возможности выбора комплектующих и аксессуаров. 
+						</div>
+					</div>
+					<div class="in-work-item">
+						<div class="in-work-item__img">
+							<img src="img/inwork1.svg">
+						</div>
+						<div class="in-work-item__text">
+							Мы разрабатываем мебель, которая соответствует современным тенденциям интерьерного дизайна.
 						</div>
 					</div>
 					<div class="in-work-item">
