--- a/app/index.html
+++ b/app/index.html
@@ -799,6 +799,7 @@
 						<div class="in-work-item__img">
 							<img src="img/inwork2.svg" style="transform: scale(1.4);">
 						</div>
+						<div class="in-work-item__head">Высокое качество</div>
 						<div class="in-work-item__text">
 							Более 15 лет создаем надежную мебель только с использованием качественных материалов. Гарантия на все изделия 18 месяцев!
 						</div>
@@ -807,6 +808,7 @@
 						<div class="in-work-item__img">
 							<img src="img/inwork3.svg" style="transform: scale(1.2);">
 						</div>
+						<div class="in-work-item__head">Современный дизайн</div>
 						<div class="in-work-item__text">
 							Каждый заказ уникален благодаря широкому ассортименту обивок, возможности выбора комплектующих и аксессуаров. 
 						</div>
@@ -815,6 +817,7 @@
 						<div class="in-work-item__img">
 							<img src="img/inwork1.svg">
 						</div>
+						<div class="in-work-item__head">Индивидуальный подход</div>
 						<div class="in-work-item__text">
 							Мы разрабатываем мебель, которая соответствует современным тенденциям интерьерного дизайна.
 						</div>
@@ -823,6 +826,7 @@
 						<div class="in-work-item__img">
 							<img src="img/inwork4.svg" style="transform: scale(0.8);">
 						</div>
+						<div class="in-work-item__head">Доставка по России</div>
 						<div class="in-work-item__text">
 							Собственный автопарк и сотрудничество с проверенными транспортными компаниями позволяет доставлять мебель во все регионы страны. 
 						</div>
