--- a/app/index.html
+++ b/app/index.html
@@ -167,8 +167,9 @@
 						<div class="header-wrapper-item">
 							<div class="header-wrapper-item-list header-wrapper-item-list_width1">
 								<div class="header-wrapper-item-list-item">									
-									<a href="about.html" class="header-wrapper-item-list-item">О компании</a>
+									<a href="#" class="header-wrapper-item-list-item">О компании</a>
 									<div class="header-wrapper-item-list-item-inner-ul">
+										<a href="about.html" class="header-wrapper-item-list-item-inner-ul-item">О нас</a>
 										<a href="principels.html" class="header-wrapper-item-list-item-inner-ul-item">История</a>
 										<a href="principels.html" class="header-wrapper-item-list-item-inner-ul-item">Принципы</a>
 										<a href="news.html" class="header-wrapper-item-list-item-inner-ul-item">Новости</a>
@@ -282,22 +283,13 @@
 												<div class="header-nav-list-item-ul-side-ul-item__text">Модульный диван</div>
 											</a>
 											<a href="catalog.html" class="header-nav-list-item-ul-side-ul-item" target="_blank">
-												<!-- <div class="header-nav-list-item-ul-side-ul-item__icon"><img src="img/icons/sofa4.svg"></div> -->
-												<div class="header-nav-list-item-ul-side-ul-item__icon">
-													<svg width="58" height="33" viewBox="0 0 58 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<path d="M54 11H56.5C57.0523 11 57.5 11.4477 57.5 12V25C57.5 25.5523 57.0523 26 56.5 26H55C54.4477 26 54 26.4477 54 27V31.5C54 32.0523 53.5523 32.5 53 32.5H52.2386C51.7996 32.5 51.4119 32.2137 51.2828 31.7941L49.7172 26.7059C49.5881 26.2863 49.2004 26 48.7614 26H8.79551C8.32986 26 7.92583 26.3214 7.82112 26.7751L6.67888 31.7249C6.57417 32.1786 6.17014 32.5 5.70449 32.5H4.5C3.94772 32.5 3.5 32.0523 3.5 31.5V27C3.5 26.4477 3.05228 26 2.5 26H2C1.44772 26 1 25.5523 1 25V12C1 11.4477 1.44772 11 2 11H4M54 11V6.54951C54 3.90416 52.1328 1.62656 49.5388 1.10777V1.10777C49.1805 1.0361 48.8159 1 48.4505 1H34.1231C31.6999 1 29.5877 2.64917 29 5V5M54 11V15.5M4 11V6.54951C4 3.90416 5.86719 1.62656 8.46116 1.10777V1.10777C8.81951 1.0361 9.18406 1 9.54951 1H20.5H23.8769C26.3001 1 28.4123 2.64917 29 5V5M4 11V15.5M54 15.5V19.5C54 20.0523 53.5523 20.5 53 20.5H29M54 15.5V15.5C53.0396 14.5396 51.7369 14 50.3787 14H32.6213C31.2631 14 29.9604 14.5396 29 15.5V15.5M4 15.5V19.5C4 20.0523 4.44772 20.5 5 20.5H29M4 15.5V15.5C4.96043 14.5396 6.26306 14 7.62132 14H25.3787C26.7369 14 28.0396 14.5396 29 15.5V15.5M29 15.5V20.5M29 15.5V5M13.5 5.5V7.5M13.5 7.5V9.5M13.5 7.5H11.5M13.5 7.5H20.5M20.5 7.5H22.5M20.5 7.5V5.5M20.5 7.5V9.5M38 5.5V7.5M38 7.5V9.5M38 7.5H36M38 7.5H45M45 7.5H47M45 7.5V5.5M45 7.5V9.5" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
-													</svg>
-												</div>
-												<div class="header-nav-list-item-ul-side-ul-item__text">Двухместный</div>
-											</a>
-											<a href="catalog.html" class="header-nav-list-item-ul-side-ul-item" target="_blank">
-												<!-- <div class="header-nav-list-item-ul-side-ul-item__icon"><img src="img/icons/sofa5.svg"></div> -->
+												<!-- <div class="header-nav-list-item-ul-side-ul-item__icon"><img src="img/icons/sofa7.svg"></div> -->
 												<div class="header-nav-list-item-ul-side-ul-item__icon">
 													<svg width="68" height="33" viewBox="0 0 68 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<path d="M64 11H66.5C67.0523 11 67.5 11.4477 67.5 12V25C67.5 25.5523 67.0523 26 66.5 26H65C64.4477 26 64 26.4477 64 27V31.5C64 32.0523 63.5523 32.5 63 32.5H62.2386C61.7996 32.5 61.4119 32.2137 61.2828 31.7941L59.7172 26.7059C59.5881 26.2863 59.2004 26 58.7614 26H8.79551C8.32986 26 7.92583 26.3214 7.82112 26.7751L6.67888 31.7249C6.57417 32.1786 6.17014 32.5 5.70449 32.5H4.5C3.94772 32.5 3.5 32.0523 3.5 31.5V27C3.5 26.4477 3.05228 26 2.5 26H2C1.44772 26 1 25.5523 1 25V12C1 11.4477 1.44772 11 2 11H4M64 11V6.54951C64 3.90416 62.1328 1.62656 59.5388 1.10777V1.10777C59.1805 1.0361 58.8159 1 58.4505 1H49.1231C46.6999 1 44.5877 2.64917 44 5V5M64 11V15.5M4 11V6.54951C4 3.90416 5.86719 1.62656 8.46116 1.10777V1.10777C8.81951 1.0361 9.18406 1 9.54951 1H18.8769C21.3001 1 23.4123 2.64917 24 5V5M4 11V15.5M64 15.5V19.5C64 20.0523 63.5523 20.5 63 20.5H44M64 15.5V15.5C63.0219 14.8479 61.8727 14.5 60.6972 14.5H47.3028C46.1273 14.5 44.9781 14.8479 44 15.5V15.5M4 15.5V19.5C4 20.0523 4.44772 20.5 5 20.5H24M4 15.5V15.5C4.97808 14.8479 6.12728 14.5 7.30278 14.5H20.6972C21.8727 14.5 23.0219 14.8479 24 15.5V15.5M24 15.5V20.5M24 15.5V5M24 15.5V15.5C24.9781 14.8479 26.1273 14.5 27.3028 14.5H40.6972C41.8727 14.5 43.0219 14.8479 44 15.5V15.5M24 20.5H44M44 20.5V15.5M44 15.5V5M24 5V5C24.5877 2.64917 26.6999 1 29.1231 1H38.8769C41.3001 1 43.4123 2.64917 44 5V5M10.5 5.5V7.5M10.5 7.5V9.5M10.5 7.5H8.5M10.5 7.5H17.5M17.5 7.5H19.5M17.5 7.5V5.5M17.5 7.5V9.5M30.5 5.5V7.5M30.5 7.5V9.5M30.5 7.5H28.5M30.5 7.5H37.5M37.5 7.5H39.5M37.5 7.5V5.5M37.5 7.5V9.5M50.5 5.5V7.5M50.5 7.5V9.5M50.5 7.5H48.5M50.5 7.5H57.5M57.5 7.5H59.5M57.5 7.5V5.5M57.5 7.5V9.5" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+														<path d="M64 11H66.5C67.0523 11 67.5 11.4477 67.5 12V25C67.5 25.5523 67.0523 26 66.5 26H65C64.4477 26 64 26.4477 64 27V31.5C64 32.0523 63.5523 32.5 63 32.5H62.2386C61.7996 32.5 61.4119 32.2137 61.2828 31.7941L59.7172 26.7059C59.5881 26.2863 59.2004 26 58.7614 26H8.79551C8.32986 26 7.92583 26.3214 7.82112 26.7751L6.67888 31.7248C6.57417 32.1786 6.17014 32.5 5.70449 32.5H4.5C3.94772 32.5 3.5 32.0523 3.5 31.5V27C3.5 26.4477 3.05228 26 2.5 26H2C1.44772 26 1 25.5523 1 25V12C1 11.4477 1.44772 11 2 11H4M64 11V6.54951C64 3.90416 62.1328 1.62656 59.5388 1.10777V1.10777C59.1805 1.0361 58.8159 1 58.4505 1H53H39.1231C36.6999 1 34.5877 2.64917 34 5V5M64 11V15.5M4 11V6.54951C4 3.90416 5.86719 1.62656 8.46116 1.10777V1.10777C8.81951 1.0361 9.18406 1 9.54951 1H16H28.8769C31.3001 1 33.4123 2.64917 34 5V5M4 11V15.5M4 15.5V19.5C4 20.0523 4.44772 20.5 5 20.5H46H63C63.5523 20.5 64 20.0523 64 19.5V15.5M4 15.5C4 15.5 6.54796 14.9426 10.5 14.2727M64 15.5C64 15.5 61.452 14.9426 57.5 14.2727M34 5C34 5 34 10.6332 34 12M34 12C42.4132 12 51.5486 13.264 57.5 14.2727M34 12C32.1872 12 30.3408 12.0587 28.5 12.1609M39.5 12L39.9952 10.1844C40.5884 8.00911 42.5642 6.5 44.819 6.5H52.668C55.5557 6.5 57.8431 8.93922 57.6577 11.821L57.5 14.2727M28.5 12.1609L28.0159 10.3337C27.4208 8.08824 25.3577 6.5483 23.0357 6.6166L15.1979 6.84712C12.3608 6.93057 10.162 9.35623 10.3567 12.1879L10.5 14.2727M28.5 12.1609C21.7977 12.5329 15.169 13.4813 10.5 14.2727" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
 													</svg>
 												</div>
-												<div class="header-nav-list-item-ul-side-ul-item__text">Трехместный</div>
+												<div class="header-nav-list-item-ul-side-ul-item__text">Диван-кровать</div>
 											</a>
 											<a href="catalog.html" class="header-nav-list-item-ul-side-ul-item" target="_blank">
 												<!-- <div class="header-nav-list-item-ul-side-ul-item__icon"><img src="img/icons/sofa6.svg"></div> -->
@@ -309,13 +301,22 @@
 												<div class="header-nav-list-item-ul-side-ul-item__text">Четырехместный</div>
 											</a>
 											<a href="catalog.html" class="header-nav-list-item-ul-side-ul-item" target="_blank">
-												<!-- <div class="header-nav-list-item-ul-side-ul-item__icon"><img src="img/icons/sofa7.svg"></div> -->
+												<!-- <div class="header-nav-list-item-ul-side-ul-item__icon"><img src="img/icons/sofa5.svg"></div> -->
 												<div class="header-nav-list-item-ul-side-ul-item__icon">
 													<svg width="68" height="33" viewBox="0 0 68 33" fill="none" xmlns="http://www.w3.org/2000/svg">
-														<path d="M64 11H66.5C67.0523 11 67.5 11.4477 67.5 12V25C67.5 25.5523 67.0523 26 66.5 26H65C64.4477 26 64 26.4477 64 27V31.5C64 32.0523 63.5523 32.5 63 32.5H62.2386C61.7996 32.5 61.4119 32.2137 61.2828 31.7941L59.7172 26.7059C59.5881 26.2863 59.2004 26 58.7614 26H8.79551C8.32986 26 7.92583 26.3214 7.82112 26.7751L6.67888 31.7248C6.57417 32.1786 6.17014 32.5 5.70449 32.5H4.5C3.94772 32.5 3.5 32.0523 3.5 31.5V27C3.5 26.4477 3.05228 26 2.5 26H2C1.44772 26 1 25.5523 1 25V12C1 11.4477 1.44772 11 2 11H4M64 11V6.54951C64 3.90416 62.1328 1.62656 59.5388 1.10777V1.10777C59.1805 1.0361 58.8159 1 58.4505 1H53H39.1231C36.6999 1 34.5877 2.64917 34 5V5M64 11V15.5M4 11V6.54951C4 3.90416 5.86719 1.62656 8.46116 1.10777V1.10777C8.81951 1.0361 9.18406 1 9.54951 1H16H28.8769C31.3001 1 33.4123 2.64917 34 5V5M4 11V15.5M4 15.5V19.5C4 20.0523 4.44772 20.5 5 20.5H46H63C63.5523 20.5 64 20.0523 64 19.5V15.5M4 15.5C4 15.5 6.54796 14.9426 10.5 14.2727M64 15.5C64 15.5 61.452 14.9426 57.5 14.2727M34 5C34 5 34 10.6332 34 12M34 12C42.4132 12 51.5486 13.264 57.5 14.2727M34 12C32.1872 12 30.3408 12.0587 28.5 12.1609M39.5 12L39.9952 10.1844C40.5884 8.00911 42.5642 6.5 44.819 6.5H52.668C55.5557 6.5 57.8431 8.93922 57.6577 11.821L57.5 14.2727M28.5 12.1609L28.0159 10.3337C27.4208 8.08824 25.3577 6.5483 23.0357 6.6166L15.1979 6.84712C12.3608 6.93057 10.162 9.35623 10.3567 12.1879L10.5 14.2727M28.5 12.1609C21.7977 12.5329 15.169 13.4813 10.5 14.2727" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+														<path d="M64 11H66.5C67.0523 11 67.5 11.4477 67.5 12V25C67.5 25.5523 67.0523 26 66.5 26H65C64.4477 26 64 26.4477 64 27V31.5C64 32.0523 63.5523 32.5 63 32.5H62.2386C61.7996 32.5 61.4119 32.2137 61.2828 31.7941L59.7172 26.7059C59.5881 26.2863 59.2004 26 58.7614 26H8.79551C8.32986 26 7.92583 26.3214 7.82112 26.7751L6.67888 31.7249C6.57417 32.1786 6.17014 32.5 5.70449 32.5H4.5C3.94772 32.5 3.5 32.0523 3.5 31.5V27C3.5 26.4477 3.05228 26 2.5 26H2C1.44772 26 1 25.5523 1 25V12C1 11.4477 1.44772 11 2 11H4M64 11V6.54951C64 3.90416 62.1328 1.62656 59.5388 1.10777V1.10777C59.1805 1.0361 58.8159 1 58.4505 1H49.1231C46.6999 1 44.5877 2.64917 44 5V5M64 11V15.5M4 11V6.54951C4 3.90416 5.86719 1.62656 8.46116 1.10777V1.10777C8.81951 1.0361 9.18406 1 9.54951 1H18.8769C21.3001 1 23.4123 2.64917 24 5V5M4 11V15.5M64 15.5V19.5C64 20.0523 63.5523 20.5 63 20.5H44M64 15.5V15.5C63.0219 14.8479 61.8727 14.5 60.6972 14.5H47.3028C46.1273 14.5 44.9781 14.8479 44 15.5V15.5M4 15.5V19.5C4 20.0523 4.44772 20.5 5 20.5H24M4 15.5V15.5C4.97808 14.8479 6.12728 14.5 7.30278 14.5H20.6972C21.8727 14.5 23.0219 14.8479 24 15.5V15.5M24 15.5V20.5M24 15.5V5M24 15.5V15.5C24.9781 14.8479 26.1273 14.5 27.3028 14.5H40.6972C41.8727 14.5 43.0219 14.8479 44 15.5V15.5M24 20.5H44M44 20.5V15.5M44 15.5V5M24 5V5C24.5877 2.64917 26.6999 1 29.1231 1H38.8769C41.3001 1 43.4123 2.64917 44 5V5M10.5 5.5V7.5M10.5 7.5V9.5M10.5 7.5H8.5M10.5 7.5H17.5M17.5 7.5H19.5M17.5 7.5V5.5M17.5 7.5V9.5M30.5 5.5V7.5M30.5 7.5V9.5M30.5 7.5H28.5M30.5 7.5H37.5M37.5 7.5H39.5M37.5 7.5V5.5M37.5 7.5V9.5M50.5 5.5V7.5M50.5 7.5V9.5M50.5 7.5H48.5M50.5 7.5H57.5M57.5 7.5H59.5M57.5 7.5V5.5M57.5 7.5V9.5" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
 													</svg>
 												</div>
-												<div class="header-nav-list-item-ul-side-ul-item__text">Диван-кровать</div>
+												<div class="header-nav-list-item-ul-side-ul-item__text">Трехместный</div>
+											</a>
+											<a href="catalog.html" class="header-nav-list-item-ul-side-ul-item" target="_blank">
+												<!-- <div class="header-nav-list-item-ul-side-ul-item__icon"><img src="img/icons/sofa4.svg"></div> -->
+												<div class="header-nav-list-item-ul-side-ul-item__icon">
+													<svg width="58" height="33" viewBox="0 0 58 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+														<path d="M54 11H56.5C57.0523 11 57.5 11.4477 57.5 12V25C57.5 25.5523 57.0523 26 56.5 26H55C54.4477 26 54 26.4477 54 27V31.5C54 32.0523 53.5523 32.5 53 32.5H52.2386C51.7996 32.5 51.4119 32.2137 51.2828 31.7941L49.7172 26.7059C49.5881 26.2863 49.2004 26 48.7614 26H8.79551C8.32986 26 7.92583 26.3214 7.82112 26.7751L6.67888 31.7249C6.57417 32.1786 6.17014 32.5 5.70449 32.5H4.5C3.94772 32.5 3.5 32.0523 3.5 31.5V27C3.5 26.4477 3.05228 26 2.5 26H2C1.44772 26 1 25.5523 1 25V12C1 11.4477 1.44772 11 2 11H4M54 11V6.54951C54 3.90416 52.1328 1.62656 49.5388 1.10777V1.10777C49.1805 1.0361 48.8159 1 48.4505 1H34.1231C31.6999 1 29.5877 2.64917 29 5V5M54 11V15.5M4 11V6.54951C4 3.90416 5.86719 1.62656 8.46116 1.10777V1.10777C8.81951 1.0361 9.18406 1 9.54951 1H20.5H23.8769C26.3001 1 28.4123 2.64917 29 5V5M4 11V15.5M54 15.5V19.5C54 20.0523 53.5523 20.5 53 20.5H29M54 15.5V15.5C53.0396 14.5396 51.7369 14 50.3787 14H32.6213C31.2631 14 29.9604 14.5396 29 15.5V15.5M4 15.5V19.5C4 20.0523 4.44772 20.5 5 20.5H29M4 15.5V15.5C4.96043 14.5396 6.26306 14 7.62132 14H25.3787C26.7369 14 28.0396 14.5396 29 15.5V15.5M29 15.5V20.5M29 15.5V5M13.5 5.5V7.5M13.5 7.5V9.5M13.5 7.5H11.5M13.5 7.5H20.5M20.5 7.5H22.5M20.5 7.5V5.5M20.5 7.5V9.5M38 5.5V7.5M38 7.5V9.5M38 7.5H36M38 7.5H45M45 7.5H47M45 7.5V5.5M45 7.5V9.5" stroke="black" stroke-linecap="round" stroke-linejoin="round"/>
+													</svg>
+												</div>
+												<div class="header-nav-list-item-ul-side-ul-item__text">Двухместный</div>
 											</a>
 										</div>
 										<div class="header-nav-list-item-ul-side-link">
@@ -808,9 +809,18 @@
 						<div class="in-work-item__img">
 							<img src="img/inwork3.svg" style="transform: scale(1.2);">
 						</div>
-						<div class="in-work-item__head">Современный дизайн</div>
+						<div class="in-work-item__head">Индивидуальный подход</div>
 						<div class="in-work-item__text">
 							Каждый заказ уникален благодаря широкому ассортименту обивок, возможности выбора комплектующих и аксессуаров. 
+						</div>
+					</div>
+					<div class="in-work-item">
+						<div class="in-work-item__img">
+							<img src="img/inwork1.svg">
+						</div>
+						<div class="in-work-item__head">Современный дизайн</div>
+						<div class="in-work-item__text">
+							Мы разрабатываем мебель, которая соответствует современным тенденциям интерьерного дизайна.
 						</div>
 					</div>
 					<div class="in-work-item">
@@ -820,15 +830,6 @@
 						<div class="in-work-item__head">Доставка по России</div>
 						<div class="in-work-item__text">
 							Собственный автопарк и сотрудничество с проверенными транспортными компаниями позволяет доставлять мебель во все регионы страны. 
-						</div>
-					</div>
-					<div class="in-work-item">
-						<div class="in-work-item__img">
-							<img src="img/inwork1.svg">
-						</div>
-						<div class="in-work-item__head">Индивидуальный подход</div>
-						<div class="in-work-item__text">
-							Мы разрабатываем мебель, которая соответствует современным тенденциям интерьерного дизайна.
 						</div>
 					</div>
 				</div>
