--- a/app/index.html
+++ b/app/index.html
@@ -797,7 +797,7 @@
 				<div class="block in-work">
 					<div class="in-work-item">
 						<div class="in-work-item__img">
-							<img src="img/inwork2.svg" style="transform: scale(1.4);">
+							<img src="img/inwork2.svg">
 						</div>
 						<div class="in-work-item__head">Высокое качество</div>
 						<div class="in-work-item__text">
@@ -806,7 +806,7 @@
 					</div>
 					<div class="in-work-item">
 						<div class="in-work-item__img">
-							<img src="img/inwork3.svg" style="transform: scale(1.2);">
+							<img src="img/inwork3.svg">
 						</div>
 						<div class="in-work-item__head">Индивидуальный подход</div>
 						<div class="in-work-item__text">
@@ -824,7 +824,7 @@
 					</div>
 					<div class="in-work-item">
 						<div class="in-work-item__img">
-							<img src="img/inwork4.svg" style="transform: scale(0.8);">
+							<img src="img/inwork4.svg">
 						</div>
 						<div class="in-work-item__head">Доставка по России</div>
 						<div class="in-work-item__text">
