tablet adaptive changes

--- a/app/index.html
+++ b/app/index.html
@@ -75,7 +75,7 @@
 					<span class="header-mob-burger__line"></span>
 				</div>
 			</div>
-			<div class="header-nav header-nav-tablet">
+			<!-- <div class="header-nav header-nav-tablet">
 				<div class="header-nav-list">
 				<div class="header-nav-list-item">Диваны<span class="arrow-down"></span></div>
 				<div class="header-nav-list-item">Кресла<span class="arrow-down"></span></div>
@@ -83,7 +83,7 @@
 				<div class="header-nav-list-item promo">Акции<span class="arrow-down"></span></div>
 				<div class="header-nav-list-item">Аксессуары<span class="arrow-down"></span></div>				
 				</div>
-			</div>
+			</div> -->
 			<div class="header-mob-menu">
 				<div class="header-mob-menu-row">
 					<a href="#" class="header-wrapper-item-list-item">
